--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ greenlet = "3.0.3"
 # spaCy runtime for NER scaffold (no fine-tuning)
 pip-tools = "^7.5.0"
 asyncpg = "^0.30.0"
+psycopg2-binary = "^2.9.10"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.5.0"
